force-app/main/default/objects/Customer_Custom__c/Customer_Custom__c.object-meta.xml
<CustomObject>
    <label>Customer Custom</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Customer Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Customers_Custom</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>