force-app/main/default/objects/Customer_Custom__c/fields/Customer_Key__c.field-meta.xml
<CustomField>
    <fullName>Customer_Key__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Customer Key</label>
    <length>80</length>
    <type>Text</type>
</CustomField>