force-app/main/default/objects/Customer_Custom__c/fields/Customer_Name__c.field-meta.xml
<CustomField>
    <fullName>Customer_Name__c</fullName>
    <caseSensitive>true</caseSensitive>
    <encryptionScheme>None</encryptionScheme>
    <label>Customer Name</label>
    <length>80</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>