force-app/main/default/objects/Customer_Custom__c/fields/new_checkbox_field__c.field-meta.xml
<CustomField>
    <fullName>new_checkbox_field__c</fullName>
    <defaultValue>false</defaultValue>
    <description>aaa</description>
    <label>new checkbox field</label>
    <type>Checkbox</type>
</CustomField>