force-app/main/default/objects/Customer_Custom__c/fields/new_text_field__c.field-meta.xml
<CustomField>
    <fullName>new_text_field__c</fullName>
    <description>aaa</description>
    <encryptionScheme>None</encryptionScheme>
    <label>new text field</label>
    <length>30</length>
    <type>Text</type>
</CustomField>